# ai-research

./: README.md
research/publications/: readme.md
research/random musings/: baselines.txt  biological brain C structs.txt  c structures for build streams.txt  entropy engine upgrade notes.txt  entropy other engine tests result ideas.txt  entropy stuffs.txt  gates bruted.txt  unknown state of entropy engine stuffs.txt
src/: readme.md
src/Beta Models/Base/: Cargo.toml  (+5 more)
src/Beta Models/Lab Tooling/: Cargo.toml  lab_upgrade.rs
src/Beta Models/Lab Tooling/src/: main.rs
src/Might Need Vulkan - 05 28 2025/: make.bat  vulkanTest_patched_v3_fixed.c
src/Research on Ion Model - 02 14 2026/: IonModel - Research Feb 14 2026 - A.c  readme.md
src/Research on Ion Model - 07 10 2025/: 1bitexperts.py  makebitlogic.py  makegenerals.py  onebitexperts.py  stepper.py
src/Research on Ion Model - 07 23 2025/: drgbs2.py  python drgbs.py
src/Research on Ion Model - 07 25 2025/: graphAI6.py  stepLearning.C  stepLearning2.C  stepLearningAnd.C
src/Research on Ion Model - 07 9 2025/: 1bitnot.py  allnot.py  chaos-model3.py  chaos-var3.py  cuda64p.py  nor_xnor.py  train_bitwise.py
src/Research on Ion Model - 08 13 2025/: alpha-gpu-cp-10.py  alpha-gpu-cp-11.py  alpha-gpu-cp-9.py
src/Research on Ion Model - 09 26 2025/: entropyChaosModel.py
src/Research on Ion Model - 09 27 2025/: chaos.py
src/Research on Ion Model - 10 07 2025/: multiHash.py
src/Research on Ion Model - 10 09 2025/: testDev.py
src/Research on Ion Model - 12 25 2025/: blender.py  generator.py  testhealth.py
(+10906 files in other folders)
